chore(release): version 2.1.0 (#608)
* chore(deps): update lockfile

* feat(commands): add PurgeCommand

* fix(VolumeCommand): volume should be multiplied

* fix(AboutCommand): load value everytime command is used

* feat(MuteCommand): muting server owner shouldn't be allowed

* feat(AboutCommand): remove 'v' in node version

* chore: change version

* chore(lang/en): add 'commands.moderation.purge'

* chore(lang/en): add 'commands.moderation.mute.cantMuteOwner'

* chore(deps): bump @discordjs/voice from 0.7.2 to 0.7.3 (#602) (#603)

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* chore(deps): upgrade lockfile

* chore(CODEOWNERS): change KurokuTetsuya to ZenShibata

* chore(*): compare changes (#605)

* chore(deps): bump @discordjs/voice from 0.7.2 to 0.7.3 (#602)

* chore(env): update notes grammaring (#604)

* chore(env): update notes grammaring

* chore(heroku): update string content

* chore(env): update notes grammaring

* chore(env): apply suggestion

* chore(env): apply suggestion

Co-authored-by: mzrtamp <mozartrafi@zhycorp.net>

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: 21Z <69188068+21Z@users.noreply.github.com>

* chore(deps-dev): move @types/i18n and @types/node to devDependencies

* chore(deps): add ffmpeg-static

* chore(deps): remove ffmpeg-static

* chore(deps): add prism-media@1.3.2

* feat(ClientUtils): add 'getFFmpegVersion' function

* refactor(AboutCommand): use 'ClientUtils#getFFmpegVersion' instead

* chore(deps): upgrade lockfile

* chore(SearchCommand): remove the selection message after cancellation

* chore(lang/en): change the 'commands.music.stayInQueue.247Disabled' message

* chore(lang/id): synchronize with 'lang/en'

* chore(deps): bump @discordjs/voice from 0.7.3 to 0.7.5 (#607)

Bumps [@discordjs/voice](https://github.com/discordjs/voice) from 0.7.3 to 0.7.5.
- [Relea

--- a/lang/en.json
+++ b/lang/en.json
@@ -38,6 +38,11 @@
 				"usageString": "Usage",
 				"commandUsageFooter": "<> = required | [] = optional {devOnly}"
 			},
+			"invite": {
+				"description": "Get the invite link for the bot",
+				"inviteTitle": "{bot} - Invite Link",
+				"clickURL": "**[Click here]({url})** to invite this bot to your server."
+			},
 			"ping": {
 				"description": "Shows the current ping of the bot",
 				"footerString": "Latency of: {user}"
@@ -82,6 +87,7 @@
 				"usage": "{prefix}mute <@mention | id> [reason]",
 				"userNoPermission": "Sorry, but you don't have **`MANAGE ROLES`** permission to use this command.",
 				"botNoPermission": "Sorry, but I don't have **`MANAGE ROLES`** permission.",
+				"cantMuteOwner": "You can't mute the server owner!",
 				"unableToCreateMuteRole": "Unable to create mute role",
 				"alreadyMuted": "That member is already **`MUTED`**",
 				"userMuted": "You have been **`MUTED`** on **{guildName}**",
@@ -89,10 +95,20 @@
 				"muteFail": "Unable to **`MUTE`** member, because: `{message}`",
 				"muteSuccess": "**{user}** has been **`MUTED`** on the server."
 			},
+			"purge": {
+				"description": "Delete messages",
+				"slashAmountDescription": "Amount of messages to delete",
+				"usage": "{prefix}purge <amount>",
+				"userNoPermission": "Sorry, but you don't have **`MANAGE MESSAGES`** permission to use this command.",
+				"botNoPermission": "Sorry, but I don't have **`MANAGE MESSAGES`** permission.",
+				"invalidAmount": "Please specify a valid number of messages to delete.",
+				"purgeFail": "Unable to **`PURGE`** messages, because: `{message}`",
+				"purgeSuccess": "**{amount}** messages have been **`PURGED`**"
+			},
 			"unban": {
-				"description": "Unban someone from the server",
-				"slashMemberDescription": "Who do you like to unban?",
-				"slashReasonDescription": "Unban reason",
+				"description": "Un-ban someone from the server",
+				"slashMemberDescription": "Who do you like to un-ban?",
+				"slashReasonDescription": "Un-ban reason",
 				"usage": "{prefix}unban <id> [reason]",
 				"alreadyUnban": "That user is not **`BANNED`**",
 				"unbanFail": "Unable to **`UN-BAN`** member, because: `{message}`",
@@ -206,7 +222,7 @@
 			"stayInQueue": {
 				"description": "Makes the bot stay in the voice channel when the queue has ended",
 				"slashDescription": "Turns mode for stay-in-voice feature",
-				"247Disabled": "Stay-in-voice feature is disabled.",
+				"247Disabled": "Stay-in-voice command is disabled.",
 				"actualState": "Stay-in-voice is **`{state}`**",
 				"newState": "Stay-in-voice is now set to **`{state}`**"
 			},
