chore(release): version 2.2.0 (#618)
* chore(deps): update lockfile

* feat(env_example): set prefix as array

* feat(env_example): add formats to 'PREFIX'

* feat(config): change 'prefix' to 'prefixes'

* feat(config): remove same character in 'prefixes'

* feat(env_example): separate main prefix and alternative prefixes

* feat(config): separate main prefix and alternative prefixes

* feat(config): main prefix shouldn't be added to alternative prefixes

* feat(MessageCreateEvent): add multi-prefix detection

* feat(MessageCreateEvent): bot mention should be checked first

* feat(MessageCreateEvent): change mention prefix detection

* feat(MessageCreateEvent): change mention prefix detection regex

* feat(CommandManager): handle custom prefix

* fix(HelpCommand): fix compiler issue

* fix(GeneralUtil): fix compiler issue

* fix(PlayCommand): fix compiler issue

* fix(SkipToCommand): fix compiler issue

* fix(ReadyEvent): fix compiler issue

* fix(config): fix wrong env value

* fix(MessageCreateEvent): fix wrong ID checking

* fix(CommandManager): fix wrong prefix checking

* fix(MessageCreateEvent): fix linter issue

* feat(GeneralUtil): add support for 'soundcloud.app.goo.gl'

* feat(lang/en): add 'categoryName' to each command category

* feat(commands): use localization on category metas

* feat(CommandContext): add non-command interaction reply

* fix(NowPlayingCommand): fix unable to get state in audio player causing the bot to restart

* chore(deps): bump got from 11.8.2 to 11.8.3 (#615)

Bumps [got](https://github.com/sindresorhus/got) from 11.8.2 to 11.8.3.
- [Release notes](https://github.com/sindresorhus/got/releases)
- [Commits](https://github.com/sindresorhus/got/compare/v11.8.2...v11.8.3)

---
updated-dependencies:
- dependency-name: got
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

Co-authore

--- a/lang/id.json
+++ b/lang/id.json
@@ -1,6 +1,7 @@
 {
 	"commands": {
 		"developers": {
+			"categoryName": "PENGEMBANG",
 			"eval": {
 				"description": "Evaluasi kode",
 				"usage": "{prefix}eval <kode>",
@@ -10,6 +11,7 @@
 			}
 		},
 		"general": {
+			"categoryName": "UMUM",
 			"about": {
 				"description": "Menampilkan informasi bot",
 				"osUptimeString": "Uptime OS",
@@ -49,6 +51,7 @@
 			}
 		},
 		"moderation": {
+			"categoryName": "MODERASI",
 			"common": {
 				"noUserSpecified": "Mohon mention seseorang.",
 				"noReasonString": "[Tidak disebutkan]",
@@ -138,6 +141,7 @@
 			}
 		},
 		"music": {
+			"categoryName": "MUSIK",
 			"lyrics": {
 				"description": "Menampilkan lirik lagu",
 				"slashDescription": "Judul lagu untuk dicari",
