--- a/lang/en.json
+++ b/lang/en.json
@@ -1,6 +1,7 @@
 {
 	"commands": {
 		"developers": {
+			"categoryName": "DEVELOPER",
 			"eval": {
 				"description": "Evaluate to the bot",
 				"usage": "{prefix}eval <some code>",
@@ -10,6 +11,7 @@
 			}
 		},
 		"general": {
+			"categoryName": "GENERAL",
 			"about": {
 				"description": "Show the bot's information",
 				"osUptimeString": "OS Uptime",
@@ -49,6 +51,7 @@
 			}
 		},
 		"moderation": {
+			"categoryName": "MODERATION",
 			"common": {
 				"noUserSpecified": "Please specify someone.",
 				"noReasonString": "[Not specified]",
@@ -139,6 +142,7 @@
 			}
 		},
 		"music": {
+			"categoryName": "MUSIC",
 			"lyrics": {
 				"description": "Show the lyrics from the song",
 				"slashDescription": "Song to search",
