--- a/lang/es.json
+++ b/lang/es.json
@@ -1,6 +1,7 @@
 {
 	"commands": {
 		"developers": {
+			"categoryName": "REVELADOR",
 			"eval": {
 				"description": "Evaluar al bot",
 				"usage": "{prefix}eval <código>",
@@ -10,6 +11,7 @@
 			}
 		},
 		"general": {
+			"categoryName": "GENERAL",
 			"about": {
 				"description": "Muestra la información del bot",
 				"osUptimeString": "Tiempo de actividad del SO",
@@ -50,6 +52,7 @@
 		},
 		"moderation": {
 			"common": {
+				"categoryName": "MODERACIÓN",
 				"noUserSpecified": "Por favor especifica un usuario.",
 				"noReasonString": "[No especificado]",
 				"reasonString": "**Razón**"
@@ -139,6 +142,7 @@
 		},
 		"music": {
 			"lyrics": {
+				"categoryName": "MÚSICA",
 				"description": "Muestra la letra de una canción",
 				"slashDescription": "Canción a buscar",
 				"usage": "{prefix}lyrics [canción]",
