chore(EvalCommand): fix grammar (#624)

--- a/lang/en.json
+++ b/lang/en.json
@@ -5,7 +5,7 @@
 			"eval": {
 				"description": "Evaluate to the bot",
 				"usage": "{prefix}eval <some code>",
-				"noCode": "No code were provided.",
+				"noCode": "No code was provided.",
 				"outputString": "Output",
 				"errorString": "Error"
 			}
