chore(release): version 2.3.0 (#683)
* feat(queue): Fetch Spotify data from API instead of scraping (#634)

* chore(env_example): tidy up

* chore(deps-dev): bump eslint from 8.3.0 to 8.4.0 (#636)

Bumps [eslint](https://github.com/eslint/eslint) from 8.3.0 to 8.4.0.
- [Release notes](https://github.com/eslint/eslint/releases)
- [Changelog](https://github.com/eslint/eslint/blob/main/CHANGELOG.md)
- [Commits](https://github.com/eslint/eslint/compare/v8.3.0...v8.4.0)

---
updated-dependencies:
- dependency-name: eslint
  dependency-type: direct:development
  update-type: version-update:semver-minor
...

Signed-off-by: dependabot[bot] <support@github.com>

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* feat(typings): add 'ISportifyAccessTokenAPIResult' interface

* feat(typings): make accessToken property to optional

* feat(SpotifyUtils): do some types and eslint adjustment

* style(typings): change from 'Array<OBJECT>' to 'OBJECT[]'

* chore(deps): bump youtube-dl-exec from 2.0.0 to 2.0.1 (#644)

Bumps [youtube-dl-exec](https://github.com/microlinkhq/youtube-dl-exec) from 2.0.0 to 2.0.1.
- [Release notes](https://github.com/microlinkhq/youtube-dl-exec/releases)
- [Changelog](https://github.com/microlinkhq/youtube-dl-exec/blob/master/CHANGELOG.md)
- [Commits](https://github.com/microlinkhq/youtube-dl-exec/compare/v2.0.0...v2.0.1)

---
updated-dependencies:
- dependency-name: youtube-dl-exec
  dependency-type: direct:production
  update-type: version-update:semver-patch
...

Signed-off-by: dependabot[bot] <support@github.com>

Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>

* feat(CommandContext): also edit reply if the context is deferred

* chore(deps): update lockfile

* feat(commands/music): create remove command

* fix(RemoveCommand): forgot to save file and commit change

* chore(deps): bump got from 11.8.3 to 12.0.0 (#645)

Bumps

--- a/lang/en.json
+++ b/lang/en.json
@@ -170,6 +170,15 @@
 			"queue": {
 				"description": "Show the queue list"
 			},
+			"remove": {
+				"description": "Remove song(s) from the queue",
+				"slashPositionsDescription": "Position of the songs to remove separated by comma or space",
+				"usage": "{prefix}remove <positions>",
+				"noPermission": "You don't have permission to use this command.",
+				"noPositions": "Please specify the song positions to remove.",
+				"songsRemoved": "Removed {removed} songs from the queue.",
+				"songSkip": "One of the removed song is the now-playing song, song skipped."
+			},
 			"repeat": {
 				"description": "Repeat current music or the queue",
 				"slashQueue": "Set repeat mode to **`QUEUE`**",
@@ -207,7 +216,6 @@
 			},
 			"skip": {
 				"description": "Skip the music",
-				"voteMessage": "{actual}/{required} voted to skip the current song",
 				"voteResultMessage": "{length}/{required} voted to skip the current song",
 				"skipMessage": "Skipped **{song}**"
 			},
